# code-agent

./: .ai-rules  .gitignore  commands.sh  pyproject.toml  run.py
.circleci/: config.yml
src/: addition_reasoning_dataset.py  bert-diffusion.py  bert_diffuser.py  checkpoints.py  data_generator.py  hyperparamter-tune.py  main.py  mask_expression.py  masked_diffusion_bert.py  masked_diffusion_model.py  masked_diffusion_state.py  math_env.py  modern-bert-test.py  noise_schedule.py  predict.py  predict_diffusion.py  predict_masked_diffusion_bert.py  predict_model.py  reasoning_example.py  reward_function.py  setup.py  simple_masked_model.py  split_expression.py  token_schedule.py  tokens.py  train.py  train_bert.py.temp  train_diffusion.py  train_masked_diffusion_bert.py  train_model.py  update_mask.py  vocab.py
test/: test_bert_diffuser.py  test_data_generator.py  test_mask_expression.py  test_masked_diffusion_bert.py  test_masked_diffusion_model.py  test_masked_diffusion_state.py  test_noise_schedule.py  test_reasoning_example.py  test_reward_function.py  test_token_schedule.py  test_update_mask.py
