[project]
name = "code-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "gymnasium==0.29.1",
    "hypothesis>=6.128.2",
    "lightning>=2.5.0.post0",
    "mypy>=1.15.0",
    "numpy<2",
    "optuna>=4.2.1",
    "sh>=2.2.2",
    "stable-baselines3==2.2.1",
    "torch==2.1.0",
]
