[project]
name = "code-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "datasets>=3.4.1",
    "hypothesis>=6.128.2",
    "lightning>=2.5.0.post0",
    "mypy>=1.15.0",
    "numpy<2",
    "sh>=2.2.2",
    "torch==2.1.0",
    "transformers>=4.49.0",
]
