[project]
name = "code-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "datasets>=3.4.1",
    "flash-attn",
    "lightning>=2.5.1",
    "mypy>=1.15.0",
    "sh>=2.2.2",
    "torch>=2.6.0",
    "transformers>=4.50.0",
]

[tool.uv.sources]
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.6cxx11abiFALSE-cp312-cp312-linux_x86_64.whl" }
